<resources>
    <string name="app_name">word-stock</string>
    <string name="word_hint">Enter word here</string>
    <string name="word_label">Word</string>
    <string name="translate_hint">Enter translate</string>
    <string name="translate_label">Translate</string>
    <string name="definition_label">Definition</string>
    <string name="definition_hint">Enter definition</string>
    <string name="favorite_label">Favorite</string>
    <string name="get_translate">Get translate</string>
    <string name="get_definition">Get definition</string>
    <string name="new_word">New word</string>
    <string name="show_count">Show count</string>
    <string name="hide_count">Hide count</string>
    <string name="count_format">%1$d words</string>
</resources>
