<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_label" />

    <EditText
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_hint"
        android:inputType="" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_label" />

    <EditText
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/translate_hint"
        android:inputType="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/definition_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/definition"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/definition_hint"
        android:inputType="" />

    <Button
        android:id="@+id/get_translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/get_translate"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/get_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/get_definition"
        android:textColor="@color/buttonLabel" />

    <CheckBox
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_label" />
</LinearLayout>